// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: 0 1`] = `" (c = 0)"`;

exports[`snapshot: 1 1`] = `" (c = 0)"`;

exports[`snapshot: 2 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..2 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
..0,2 (c = 40)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....2 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,1 (c = 40)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)"
`;

exports[`snapshot: 3 1`] = `" (c = 0)"`;

exports[`snapshot: 4 1`] = `
"1,3,0,1 (c = 90)
..0,1,1,3 (c = 90)
.... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1,1 (c = 50)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)"
`;

exports[`snapshot: 5 1`] = `
"1,2 (c = 50)
.. (c = 0)
..1 (c = 20)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
..2 (c = 30)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
..0,2 (c = 40)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....2 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
..1,0 (c = 30)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
.... (c = 0)
....0 (c = 10)
...... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0 (c = 10)
...... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
..1,1 (c = 40)
.... (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....1 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)"
`;

exports[`snapshot: 6 1`] = `
"0,1,0,0 (c = 50)
..0,0,0,1 (c = 50)
.... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0,0 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,0,1 (c = 40)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)"
`;

exports[`snapshot: 7 1`] = `
"7,0,0,4 (c = 150)
..0,0,4,7 (c = 150)
.... (c = 0)
....0,0 (c = 20)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0 (c = 10)
........ (c = 0)
....0,0,4 (c = 70)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
......0 (c = 10)
........ (c = 0)
......4 (c = 50)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........2 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
......0,4 (c = 60)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,2 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........0,0 (c = 20)"
`;

exports[`snapshot: 8 1`] = `
"7,8,4,6,8,3,8,6 (c = 580)
..3,4,6,6,7,8,8,8 (c = 580)
.... (c = 0)
....3,4,6,6 (c = 230)
...... (c = 0)
......3,4 (c = 90)
........ (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........0,4 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........4 (c = 50)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
............3 (c = 40)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
..............2 (c = 30)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
................1 (c = 20)
.................. (c = 0)
..................0 (c = 10)
.................... (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,2 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)"
`;

exports[`snapshot: 9 1`] = `
"1,8,0,6 (c = 190)
..0,1,6,8 (c = 190)
.... (c = 0)
....0,1 (c = 30)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......0,0 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........0 (c = 10)
.......... (c = 0)
....0,1,6 (c = 100)
...... (c = 0)
......0 (c = 10)
........ (c = 0)
......0,1 (c = 30)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,0 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0 (c = 10)
............ (c = 0)
......1 (c = 20)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
......6 (c = 70)
........ (c = 0)
........0 (c = 10)
.......... (c = 0)
........3 (c = 40)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
........4 (c = 50)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............2 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)
................ (c = 0)
................0 (c = 10)
.................. (c = 0)
........5 (c = 60)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........2 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..........3 (c = 40)"
`;

exports[`snapshot: 10 1`] = `
"5,9,4,6,4,1,4,9,1,5 (c = 580)
..1,1,4,4,4,5,5,6,9,9 (c = 580)
.... (c = 0)
....1,1,4,4,4 (c = 190)
...... (c = 0)
......1,1 (c = 40)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........0,1 (c = 30)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
........1,0 (c = 30)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0 (c = 10)
............ (c = 0)
..........0,0 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............0 (c = 10)
.............. (c = 0)
......1,1,4 (c = 90)
........ (c = 0)
........1 (c = 20)
.......... (c = 0)
..........0 (c = 10)
............ (c = 0)
........1,1 (c = 40)
.......... (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........1 (c = 20)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
..........0,1 (c = 30)
............ (c = 0)
............0 (c = 10)
.............. (c = 0)
............1 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
............0,0 (c = 20)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............0 (c = 10)
................ (c = 0)
..........1,0 (c = 30)
............0,1 (c = 30)
.............. (c = 0)
..............0 (c = 10)
................ (c = 0)
..............1 (c = 20)"
`;
